# 32BitComputer

./: CMakeLists.txt  README.MD  README.md  main.cpp  notes
include/: CPU.h  Console.h  Memory.h  Registers.h  definitions.h  masks.h  opcodes.h  settings.h  utils.h
src/: CPU.cpp  Console.cpp  Memory.cpp  Registers.cpp  main.cpp  utils.cpp
